# bingyue_dic_new

./: .env.dev  README.md  pyproject.toml
data/: dic.txt
src/plugins/: api_fn.py  date_tree.py  dic_match.py  event_onebot.py  load_file.py  start_dic.py  variable_main.py  variable_v.py  variable_ver.py
